localstorage bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 3em;
   border-radius: 1em;
   transition: 2s;
 }
